# mercari

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/desktop/: README.md  package.json
apps/desktop/src/: index.html  main.js  styles.css
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs
apps/server/: .env.example  README.md  package.json
apps/server/data/: state.json
apps/server/src/: config.js  create-app.js  event-hub.js  index.js  scheduler.js  scrape-log.js  store.js
desktop/src/: index.html  main.js  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs
scripts/: dev-all.sh  dev-full.sh  dev-web-server.sh
server/: .env.example  data.json  package.json
server/src/: db.js  index.js  notify.js  scrape.js
web/src/: App.vue  style.css
